<resources>
    <string name="app_name">HealthPal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Healthpal</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="search_hint">Search</string>

    <string name="menu_dash">Dashboard</string>
    <string name="menu_calorie">Stat Log</string>
    <string name="menu_ai">AI Assistant</string>

    <string name="tvSettingsTitle">Settings</string>

    <string name="tvLogIntroTitle">Information Log</string>

    <string name="tvLogTitle">Enter Nutritional Information</string>
    <string name="tvStatLogTitle">Enter Information</string>
    <string name="tvCalTitle">Calories:</string>
    <string name="tvCalHint">Calories</string>
    <string name="tvProTitle">Protein(g):</string>
    <string name="tvProHint">Protein</string>
    <string name="tvFatTitle">Fat(g):</string>
    <string name="tvFatHint">Fat</string>
    <string name="tvCarbTitle">Carbs(g):</string>
    <string name="tvCarbHint">Carbs</string>
    <string name="tvHeightTitle">Height(ft, in):</string>
    <string name="tvHeightFtHint">ft</string>
    <string name="tvHeightInHint">in</string>
    <string name="tvWeightTitle">Weight(lbs):</string>
    <string name="tvWeightHint">Weight</string>

    <string name="tvNutriToday">Nutrients Today:</string>
    <string name="tvCalToday">Calories:</string>
    <string name="tvProToday">Protein:</string>
    <string name="tvFatToday">Fat:</string>
    <string name="tvCarbToday">Carbs:</string>

    <string name="inUsernameHint">Email</string>
    <string name="inPasswordHint">Password</string>
    <string name="inPasswordHint2">Re-Enter Password</string>

    <string name="btSignIn">Sign In</string>
    <string name="btSignOut">Sign Out</string>
    <string name="btSubmit">Submit</string>
    <string name="btStats">Height/Weight</string>
    <string name="btNutrition">Nutrition</string>
    <string name="btCreateEmailAcc">Create Account</string>
    <string name="btShowMoreText">Show more</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>