<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dash"
            android:icon="@drawable/ic_menu_dash"
            android:title="@string/menu_dash" />
        <item
            android:id="@+id/nav_calorie"
            android:icon="@drawable/ic_menu_calorie"
            android:title="@string/menu_calorie" />

        <!--TODO: Give AI Assist a unique icon, probably the 4 star thing every AI assistant uses-->
        <item
            android:id="@+id/nav_ai"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_ai"
            />
    </group>
</menu>