<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_signIn">


    <fragment
        android:id="@+id/nav_dash"
        android:name="com.example.health_pal.ui.Dashboard.DashboardFragment"
        android:label="@string/menu_dash"
        tools:layout="@layout/fragment_dash" >
        <action
            android:id="@+id/action_nav_dash_to_nav_signIn"
            app:destination="@id/nav_signIn" />
    </fragment>

    <fragment
        android:id="@+id/nav_calorie"
        android:name="com.example.health_pal.ui.calorie.CalorieFragment"
        android:label="@string/menu_calorie"
        tools:layout="@layout/frag_log_intro" />

    <fragment
        android:id="@+id/action_settings"
        android:name="com.example.health_pal.ui.Settings.SettingsFragment"
        android:label="@string/action_settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_action_settings_to_nav_signIn"
            app:destination="@id/nav_signIn" />
    </fragment>

    <fragment
        android:id="@id/nav_ai"
        android:name="com.example.health_pal.ui.AIAssist.AIFragment"
        android:label="@string/menu_ai"
        tools:layout="@layout/fragment_ai"
        />
    <fragment
        android:id="@+id/nav_signIn"
        android:name="com.example.health_pal.ui.signIn.SignInFragment"
        tools:layout="@layout/fragment_signin" >

        <action
            android:id="@+id/action_nav_signIn_to_nav_dash"
            app:destination="@id/nav_dash" />
    </fragment>
</navigation>