<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/singIn_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/bt_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btSignIn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.581" />

    <Button
        android:id="@+id/bt_createAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btCreateEmailAcc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.923" />

    <Button
        android:id="@+id/bt_createAcc2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btCreateEmailAcc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.726" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ETEmail"
        android:layout_width="269dp"
        android:layout_height="48dp"
        android:hint="@string/inUsernameHint"
        android:textAlignment="center"
        android:textColor="#050505"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.311" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ETPassword"
        android:layout_width="269dp"
        android:layout_height="48dp"
        android:hint="@string/inPasswordHint"
        android:textAlignment="center"
        android:textColor="#040404"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.402" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ETPassword2"
        android:layout_width="269dp"
        android:layout_height="48dp"
        android:hint="@string/inPasswordHint2"
        android:textAlignment="center"
        android:textColor="#040404"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.484" />
</androidx.constraintlayout.widget.ConstraintLayout>